--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/photoswipe/dist/photoswipe.css",
+              "node_modules/photoswipe/dist/default-skin/default-skin.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/photoswipe/dist/photoswipe.js",
+              "node_modules/photoswipe/dist/photoswipe-ui-default.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
