--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "testServer": "lite-server --baseDir='dist/simoneti-winery'",
-    "deploy": "ng build --prod && firebase deploy"
+    "deploy": "ng build --configuration production && firebase deploy"
   },
   "private": true,
   "dependencies": {
